# apriltag_triangulation

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
apriltag_triangulation/: apriltag_adapter_node.py  apriltag_triangulation_node.py  geometric_triangulation_node.py  multi_apriltag_fusion_node.py  multi_geometric_triangulation_node.py
config/: rviz.rviz  rviz3cam.rviz  tags.yaml
launch/: dual_apriltag_triangulation.launch.py  triple_apriltag_triangulation.launch.py
scripts/: april_tag_extrinsic_calibration.py  april_tag_extrinsic_calibration_new.py  measure_extrinsics_multi.py
