<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>apriltag_triangulation</name>
  <version>0.1.0</version>
  <description>
    Dual-camera AprilTag triangulation for robot ground-truth tracking.
  </description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>apriltag_ros</depend>
  <depend>apriltag_msgs</depend>
  <depend>usb_cam</depend>

  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
